Implement post edit functionality